Correção link Linkedin

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							de alto nível para clientes e gestores. </p>
 						<ul class="social-painel">
 							<li class="list-painel">
-								<a href="http://linkedin.com/in/marcus-italo-17b597137">
+								<a href="http://linkedin.com/in/marcusitalo">
 									<span class="social-icon">
 										<i class="fa fa-linkedin fa-4x"></i>
 									</span>
@@ -466,7 +466,7 @@
 						</h6>
 						</div>
 						<div>
-							<a href="http://linkedin.com/in/marcus-italo-17b597137" title="Acesso ao Linkedin">
+							<a href="http://linkedin.com/in/marcusitalo" title="Acesso ao Linkedin">
 									<i class="fa fa-linkedin fa-4x"></i>
 							</a>
 							<a href="https://pt.stackoverflow.com/users/65091/marcus-italo" title="Acesso ao StackOverflow">
