fix: ajustes no layout

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<h1 class="name">Marcus
 						<span class="lastname">Italo</span>
 					</h1>
-					<div class="post-painel welcome">33 anos, Brasileiro, Fortaleza - CE,
+					<div class="post-painel welcome"><span id="age"></span> anos, Brasileiro, Fortaleza - CE,
 					</div>
 					<div class="post-painel welcome">
 						<p>Programador Web com experiência em desenvolvimento de Aplicações Webs, WebServices, Integração Multiplataforma e Relatórios
@@ -321,17 +321,7 @@
 			</section>
 			<section class="painel" data-speed="10" id="education">
 				<div class="view-painel">
-					<h2 class="title-painel">Formação</h2>
-
-					<div class="post-painel fluid-post">
-						<h3 class="subtitle-painel">Faculdade Lourenço Filho</h3>
-						<div class="info-painel">Bacharel em Sistemas de Informação</div>
-						<div></div>
-						<div class="date-painel">
-							<span class="date-info">Agosto 2010 - Agosto 2014</span>
-						</div>
-					</div>
-
+					
 					<h2 class="title-painel">Habilidades</h2>
 
 					<ul class="programmer-painel">
@@ -396,6 +386,17 @@
 							</span>
 						</li>
 					</ul>
+					
+					<h2 class="title-painel">Formação</h2>
+
+					<div class="post-painel fluid-post">
+						<h3 class="subtitle-painel">Faculdade Lourenço Filho</h3>
+						<div class="info-painel">Bacharel em Sistemas de Informação</div>
+						<div></div>
+						<div class="date-painel">
+							<span class="date-info">Agosto 2010 - Agosto 2014</span>
+						</div>
+					</div>
 
 					<h2 class="title-painel">Certificações</h2>
 
