chore: adicionando tecnologias e imagem

--- a/index.html
+++ b/index.html
@@ -382,6 +382,11 @@
 						</li>
 						<li class="list-painel">
 							<span class="social-icon">
+								<i class="devicon-sqlite-plain"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
 								<i class="devicon devicon-gimp-plain"></i>
 							</span>
 						</li>
@@ -393,6 +398,51 @@
 						<li class="list-painel">
 							<span class="social-icon">
 								<i class="devicon devicon-photoshop-plain"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
+								<i class="devicon devicon-django-plain"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
+								<i class="devicon devicon-docker-plain"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
+								<i class="devicon devicon-git-plain"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
+								<i class="devicon devicon-ionic-original"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
+								<i class="devicon devicon-python-plain"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
+								<i class="devicon devicon-react-original"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
+								<i class="devicon devicon-vuejs-plain"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
+								<i class="devicon devicon-adonisjs-original"></i>
+							</span>
+						</li>
+						<li class="list-painel">
+							<span class="social-icon">
+								<i class="devicon devicon-adonisjs-original"></i>
 							</span>
 						</li>
 					</ul>
@@ -564,7 +614,7 @@
 			<footer>
 					<div>
 						<h6 class="nameLogo rodape-nameLogo">
-							<img src="images/favicon.png" id="imglogomarca" />	
+							<img src="images/favicon.png" id="imglogomarca">	
 							Marcus
 							<span class="lastnameLogo">Italo</span>
 						</h6>
