--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en" class="no-js" >
 <head>
 
+	<!-- Meta Tags -->
+	<meta name="title" content="Marcus Italo">
+	<meta name="description" content="Neste site você poderá conhecer um pouco dos trabalhos desenvolvidos por este programador Web."/>
+	<meta name="keywords" content="marcus italo,Marcus Italo,marcusitalo,Programador PHP,PHP,Web,#marcusitalo,@marcusitalo,Criar Site,Programador,html,php,sql,postgresql,mysql,jquery"/>
+	<meta name="owner" content="marcusitalo@outlook.com.br" />
+	<meta name="author" content="Marcus Italo" />
+	<meta name="revisit-after" content="7 dias" />
+	<meta http-equiv="expires" content="" />
+	<meta http-equiv="charset" content="UTF-8" />
+	<meta http-equiv="content-language" content="Português" />
+	<meta http-equiv="vw96.object type" content="Pessoal" />
+	<meta name="rating" content="Geral" />
+	<meta name="robots" content="index,follow" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<!-- Meta Tags -->
+
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Marcus Italo</title>
 
     <script>
