feat: change description website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<!-- Meta Tags -->
 	<meta name="title" content="Marcus Italo">
-	<meta name="description" content="Neste site você poderá conhecer um pouco dos trabalhos desenvolvidos por este programador Web."/>
+	<meta name="description" content=" Full-stack developer passionate about building robust web applications and services. Focused on performance, agility, and best practices to deliver practical, high-quality solutions."/>
 	<meta name="keywords" content="marcus italo,Marcus Italo,marcusitalo,Programador PHP,PHP,Web,#marcusitalo,@marcusitalo,Criar Site,Programador,html,php,sql,postgresql,mysql,jquery"/>
 	<meta name="owner" content="marcusitalo@outlook.com.br" />
 	<meta name="author" content="Marcus Italo" />
