feat: change images e informations

--- a/index.html
+++ b/index.html
@@ -275,36 +275,36 @@ for clients and managers. </p>
                         </div> <!--end s-about__block -->
 
                         <div class="grid-list-items__item s-about__block">
-                            <h4 class="s-about__block-title">Awards</h4>
+                            <h4 class="s-about__block-title">Projects</h4>
 
                             <ul class="s-about__list">
                                 <li>
                                     <a href="#0">
-                                        Desenvolvedor Web
-                                        <span>2012 — Today </span>
+                                        CMS´s
+                                        <span>Django, Strapi, CraftCMS</span>
                                     </a>                                        
                                 </li>
                                 <li>
                                     <a href="#0">
-                                        Site Of The Day
-                                        <span>Awwwards — 2023</span>
+                                        Institutional Websites
+                                        <span>PhP, HTML5, CSS3, jQuery</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#0">
-                                        Agency of The Year
-                                        <span>Awwwards — 2022</span>
+                                        Landpages
+                                        <span>VueJs, ReactJs, HTML5 & CSS3</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#0">
-                                        FWA of The Month
-                                        <span>FWA — 2022</span>
+                                        Promotional Websites
+                                        <span>Python, Django, FastApi, PhP, Laravel</span>
                                     </a>
                                 </li><li>
                                     <a href="#0">
-                                        Site Of The Month
-                                        <span>Awwwards — 2022</span>
+                                        Others
+                                        <span>PostgresSql, MySQL, SQLserver</span>
                                     </a>                                        
                                 </li>
                             </ul>
